# bumi-mcp

./: .env.example  .gitignore  .mcpbignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  HANDOVER.md  INSTALL.md  INTEGRATION.md  README.md  STATUS.md  glama.json  justfile  llms.txt  pyproject.toml  start.ps1
.github/workflows/: ci.yml
mcpb/: README.md  manifest.json
mcpb/assets/prompts/: examples.json  system.md  user.md
native/: Cargo.toml  build.ps1  tauri.conf.json
native/capabilities/: default.json
native/src/: backend.rs
native/windows/: hooks.nsh
scripts/: cua-nsis-config.json  deploy.sh
src/bumi_mcp/: __init__.py  __main__.py  agentic.py  api_v1.py  app.py  bridge_factory.py  bridge_state.py  config.py  knowledge.py  lifecycle.py  portmanteau.py  server.py  tools_manifest.py
src/bumi_mcp/core/: __init__.py  ros2_bridge.py
src/bumi_mcp/data/: fleet_default.json
src/bumi_mcp/skills/bumi-operator/: SKILL.md
src/bumi_mcp/testing/: __init__.py  mock_bridge.py
tests/: conftest.py  test_api_v1.py  test_portmanteau.py
web_sota/: index.html  package-lock.json  package.json  start.ps1  vite.config.ts
web_sota/backend/: server.py
web_sota/src/: App.tsx  index.css
web_sota/src/api/: client.ts
web_sota/src/components/: FloatingChat.tsx
web_sota/src/components/layout/: AppLayout.tsx
web_sota/src/lib/: api.ts
web_sota/src/pages/: Dashboard.tsx  FleetPage.tsx  HelpPage.tsx  Logging.tsx  SettingsPage.tsx  ToolsPage.tsx  VirtualPage.tsx
